--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,12 +2,57 @@ body {
     background:#fff;
 }
 
-.container {
-    height:100%;
-    width:100%;
-    width:75%;
-    margin:auto;
-}
 .header {
-   text-align:center; 
+    margin-top: 3rem;
 }
+
+.content {
+    margin-top:1rem;
+}
+
+/* Navbar */
+.navbar + .docs-section {
+    border-top-width: 0; }
+.navbar,
+.navbar-spacer {
+    display: block;
+    width: 100%;
+    height: 6.5rem;
+    background: #fff;
+    z-index: 99;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee; }
+.navbar-spacer {
+    display: none; }
+.navbar > .container {
+    width: 100%; }
+.navbar-list {
+    list-style: none;
+    margin-bottom: 0; }
+.navbar-item {
+    position: relative;
+    float: left;
+    margin-bottom: 0; }
+.navbar-link::after {
+        content:" / ";
+}
+.navbar-link {
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 600;
+    letter-spacing: .2rem;
+    margin-right: 35px;
+    text-decoration: none;
+    line-height: 6.5rem;
+    color: #222; }
+.navbar-link.active {
+    color: #33C3F0; }
+.has-docked-nav .navbar {
+    position: fixed;
+    top: 0;
+    left: 0; }
+.has-docked-nav .navbar-spacer {
+    display: block; }
+/* Re-overiding the width 100% declaration to match size of % based container */
+.has-docked-nav .navbar > .container {
+    width: 80%; }
