HostsFile :: Windows Walkthrough Basic
Sample markup to be used by angular generator
for Windows walkthrough (ss are win8)

       modified:   app/components/hostsFileViewer/hostsFileViewerWindows.html
       new file:   assets/img/windows/1.png
       new file:   assets/img/windows/2.png
       new file:   assets/img/windows/3.png
       new file:   assets/img/windows/4.png
       new file:   assets/img/windows/5.png
       new file:   assets/img/windows/6.png
       new file:   assets/img/windows/7.png

--- a/app/components/hostsFileViewer/hostsFileViewerWindows.html
+++ b/app/components/hostsFileViewer/hostsFileViewerWindows.html
@@ -1,1 +1,55 @@
-<p>Test Windows</p>
+<div class="walkthrough">
+    <h2>Windows</h2>
+
+    <ol class="walkthrough">
+        <li>
+            <span>
+                Open the Windows Start Menu, and type "Notepad"
+            </span>
+            <img src="assets/img/windows/1.png" alt="Step 1"/>
+        </li>
+        <li>
+            <span>
+                Right click Notepad, and select "Run as Administrator"
+            </span>
+            <img src="assets/img/windows/2.png" alt="Step 2"/>
+        </li>
+        <li>
+            <span>
+                Once open, select File > Open from the menu bar
+            </span>
+            <img src="assets/img/windows/3.png" alt="Step 3"/>
+        </li>
+        <li>
+            <span>
+                Once in the Open dialog, click in the address bar, 
+                input '%WINDIR%/system32/drivers/etc/', and press enter
+            </span>
+            <img src="assets/img/windows/4.png" alt="Step 4"/>
+        </li>
+        <li>
+            <span>
+                Change the "File Types" dropdown to be "All Files", 
+                and select the file named "hosts"
+            </span>
+            <img src="assets/img/windows/5.png" alt="Step 5"/>
+        </li>
+        <li>
+            <span>
+                Once open, you'll see the default hosts file information at the top;
+                Move to a blank line, and enter the source and desired alias, separated by a space. 
+                (Usually an IP address, followed by a url-style alias, as shown below)
+            </span>
+            <img src="assets/img/windows/6.png" alt="Step 6"/>
+        </li>
+        <li>
+            <span>
+                Save the file, and open the new alias in a browser, 
+                or use command prompt to ping the alias
+                Note: You may have to reopen any open browsers to see the change
+            </span>
+            <img src="assets/img/windows/7.png" alt="Step 7"/>
+        </li>
+    </ol>
+    
+</div>
