--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -44,7 +44,9 @@ body {
     margin-right: 35px;
     text-decoration: none;
     line-height: 6.5rem;
-    color: #222; }
+    color: #222;
+    cursor:pointer;
+ }
 .navbar-link.active {
     color: #33C3F0; }
 .has-docked-nav .navbar {
